# legal-rag

./: .env.example  .gitignore  README.md  check_gpu.py  docker-compose.yml  pyproject.toml  test_chunker_quick.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py
backend/app/models/: legal_document.py
backend/app/services/ingestion/: chunker.py  embedder.py  index_job.py
backend/scripts/: index_all.py
crawler/: __init__.py  __main__.py  fix_encoding_test.py  recon.py  run_crawl.py
crawler/core/: __init__.py  ban_detector.py  http_client.py  playwright_client.py  proxy_pool.py  rate_limiter.py  storage.py
crawler/middleware/: __init__.py
crawler/parsers/: __init__.py  tvpl_parser.py
crawler/spiders/: __init__.py  tvpl_spider.py
tests/test_crawler/: test_crawl_integration.py  test_rate_limiter.py  test_tvpl_parser.py
